--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,16 +14,12 @@ python-dotenv>=1.0.0
 aiofiles>=23.0.0
 jinja2>=3.1.0
 
-# Existing project dependencies (reuse)
+# Core dependencies  
 playwright>=1.40.0
-asyncio-mqtt>=0.13.0
-dataclasses-json>=0.6.0
-
 
 # System resource monitoring
 psutil>=5.9.0
 
-# Data processing
+# Data processing  
 requests>=2.31.0
 aiohttp>=3.9.0
-pywinpty>=2.0.14
