--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ jinja2>=3.1.0
 
 # Core dependencies  
 playwright>=1.40.0
+playwright-stealth>=1.0.6
 
 # System resource monitoring
 psutil>=5.9.0
