--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,11 @@ playwright-stealth>=1.0.6
 # System resource monitoring
 psutil>=5.9.0
 
-# Data processing  
+# Data processing
 requests>=2.31.0
 aiohttp>=3.9.0
+
+# Proxy service dependencies
+mitmproxy>=10.0.0
+qrcode[pil]>=7.4
+pywin32>=306
