--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.3.0",
     "dayjs": "^1.11.0",
     "lodash-es": "^4.17.21",
+    "qrcode.react": "^3.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^6.26.0",
