--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,11 @@ htmlcov/
 # Temporary files
 tmp/
 temp/
+
+# Backend specific
+backend/venv/
+backend/static/
+backend/terminal_service/node_modules/
+
+# Frontend build
+frontend/dist/
