--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.55.0",
+    "@types/cytoscape": "^3.21.9",
     "@xterm/addon-fit": "^0.11.0",
     "@xterm/addon-search": "^0.16.0",
     "@xterm/addon-web-links": "^0.12.0",
@@ -20,6 +21,7 @@
     "antd": "^6.1.1",
     "axios": "^1.6.0",
     "classnames": "^2.3.0",
+    "cytoscape": "^3.33.1",
     "dayjs": "^1.11.0",
     "lodash-es": "^4.17.21",
     "qrcode.react": "^3.1.0",
