--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,5 +30,9 @@ mitmproxy>=10.0.0
 qrcode[pil]>=7.4
 pywin32>=306
 
+# Native Hook dependencies (optional)
+frida>=16.0.0
+frida-tools>=12.0.0
+
 # Code beautifier
 jsbeautifier>=1.14.0
