重命名qwen相关

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Web Analyzer V2 配置
-# AI功能已移除，专注于网络流量录制和分析
+# AI能力通过终端服务提供（CLI桥接）
 
 # 数据库配置
 DATABASE_URL=sqlite:///./data/app.db
@@ -7,6 +7,11 @@ DATABASE_URL=sqlite:///./data/app.db
 # 服务端口配置
 BACKEND_PORT=8000
 FRONTEND_PORT=3000
+TERMINAL_SERVICE_PORT=3001
+
+# 终端服务配置
+TERMINAL_SERVICE_URL=http://localhost:3001
+AI_CLI_DEFAULT=qwen
 
 # 开发模式配置
 DEBUG=true
